--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: optional:file:application-secret.yml
+    import: optional:classpath:application-secret.yml
   security:
     oauth2:
       resourceserver:
