--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,12 @@ services:
     depends_on:
       - elasticsearch
 
+  redis:
+    image: redis:latest
+    container_name: javitto_redis_cache
+    ports:
+      - "6379:6379"
+
 
 volumes:
   postgres_data:
