--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,10 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/javitto
           jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
-
+  cache:
+    redis:
+      host: redis
+      port: 6379
 
   elasticsearch:
     uris: http://localhost:9200
