--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
     redis:
       host: redis
       port: 6379
+      time-to-live: 600
 
   elasticsearch:
     uris: http://localhost:9200
