--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<artifactId>spring-data-redis</artifactId>
 			<version>3.4.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
