--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,10 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 		<!-- SWAGGER -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
