--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -4,10 +4,14 @@ input {
     codec => json_lines
   }
 }
+
+filter {
+    
+}
+
 output {
   elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    index => "javitto-logs-%{+YYYY.MM.dd}"
+    hosts => ["http://localhost:9200"]
+    index => "logs-%{+YYYY.MM.dd}"
   }
-  stdout { codec => rubydebug }
 }
